fix: reset wrapped section style for 960 media query

--- a/src/App.css
+++ b/src/App.css
@@ -228,6 +228,13 @@ footer {
     margin:0 0 20px;
   }
 
+  section > section {
+    border:none;
+    border-width:0;
+    padding:0;
+    margin:0;
+  }
+
   header a small {
     display:inline;
   }
